@@ -168,8 +168,11 @@ NEW FEATURES
     o	New function sample.int() to provide documented access to the
 	internal part of sample() (sampling from 1:n).
 
-    o   New version of withVisible() for better handling of cases like
-        withVisible(eval.parent(....)).
+    o	New version of withVisible() for better handling of cases like
+	withVisible(eval.parent(....)).
+
+    o	showClass() which is also used to auto-print class definitions, now
+	mentions the package where the class comes from, if there is one.
 
 
 
